attached_assets/Pasted-t85491005-penguin-prism-lang-make-gcc-Wall-Wextra-std-c_1776336961990.txt
t85491005@penguin:~/prism-lang$ make
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/main.o src/main.c
In file included from src/gui_native.h:7,
                 from src/main.c:16:
/usr/include/X11/Xlib.h:222:2: error: conflicting types for ‘GC’; have ‘struct _XGC *’
  222 | *GC;
      |  ^~
In file included from src/interpreter.h:6,
                 from src/main.c:12:
src/gc.h:136:3: note: previous declaration of ‘GC’ with type ‘GC’
  136 | } GC;
      |   ^~
src/gui_native.h:15:8: warning: type defaults to ‘int’ in declaration of ‘gc’ [-Wimplicit-int]
   15 |     GC gc;
      |        ^~
src/main.c: In function ‘configure_gc_from_args’:
src/main.c:208:9: warning: type defaults to ‘int’ in declaration of ‘gc’ [-Wimplicit-int]
  208 |     GC *gc = gc_global();
      |         ^~
src/main.c:208:14: warning: initialization of ‘int *’ from incompatible pointer type ‘GC *’ [-Wincompatible-pointer-types]
  208 |     GC *gc = gc_global();
      |              ^~~~~~~~~
src/main.c:209:27: warning: passing argument 1 of ‘gc_configure_from_env’ from incompatible pointer type [-Wincompatible-pointer-types]
  209 |     gc_configure_from_env(gc);
      |                           ^~
      |                           |
      |                           int *
src/gc.h:146:39: note: expected ‘GC *’ but argument is of type ‘int *’
  146 | void        gc_configure_from_env(GC *gc);
      |                                   ~~~~^~
src/main.c:214:15: error: request for member ‘stats_on_shutdown’ in something not a structure or union
  214 |             gc->stats_on_shutdown = true;
      |               ^~
src/main.c:216:15: error: request for member ‘log_enabled’ in something not a structure or union
  216 |             gc->log_enabled = true;
      |               ^~
src/main.c:218:27: warning: passing argument 1 of ‘gc_set_policy’ from incompatible pointer type [-Wincompatible-pointer-types]
  218 |             gc_set_policy(gc, GC_POLICY_STRESS);
      |                           ^~
      |                           |
      |                           int *
src/gc.h:173:31: note: expected ‘GC *’ but argument is of type ‘int *’
  173 | void        gc_set_policy(GC *gc, GCPolicy policy);
      |                           ~~~~^~
src/main.c:219:15: error: request for member ‘stress_enabled’ in something not a structure or union
  219 |             gc->stress_enabled    = true;
      |               ^~
src/main.c:220:15: error: request for member ‘sweep_enabled’ in something not a structure or union
  220 |             gc->sweep_enabled     = true;
      |               ^~
src/main.c:221:15: error: request for member ‘log_enabled’ in something not a structure or union
  221 |             gc->log_enabled       = true;
      |               ^~
src/main.c:222:15: error: request for member ‘stats_on_shutdown’ in something not a structure or union
  222 |             gc->stats_on_shutdown = true;
      |               ^~
src/main.c:224:15: error: request for member ‘sweep_enabled’ in something not a structure or union
  224 |             gc->sweep_enabled = true;
      |               ^~
src/main.c:226:15: error: request for member ‘mem_report_enabled’ in something not a structure or union
  226 |             gc->mem_report_enabled = true;
      |               ^~
src/main.c:227:15: error: request for member ‘sweep_enabled’ in something not a structure or union
  227 |             gc->sweep_enabled      = true;  /* enable sweep so we have real stats */
      |               ^~
src/main.c:231:31: warning: passing argument 1 of ‘gc_set_policy’ from incompatible pointer type [-Wincompatible-pointer-types]
  231 |                 gc_set_policy(gc, GC_POLICY_THROUGHPUT);
      |                               ^~
      |                               |
      |                               int *
src/gc.h:173:31: note: expected ‘GC *’ but argument is of type ‘int *’
  173 | void        gc_set_policy(GC *gc, GCPolicy policy);
      |                           ~~~~^~
src/main.c:233:31: warning: passing argument 1 of ‘gc_set_policy’ from incompatible pointer type [-Wincompatible-pointer-types]
  233 |                 gc_set_policy(gc, GC_POLICY_LOW_LATENCY);
      |                               ^~
      |                               |
      |                               int *
src/gc.h:173:31: note: expected ‘GC *’ but argument is of type ‘int *’
  173 | void        gc_set_policy(GC *gc, GCPolicy policy);
      |                           ~~~~^~
src/main.c:235:31: warning: passing argument 1 of ‘gc_set_policy’ from incompatible pointer type [-Wincompatible-pointer-types]
  235 |                 gc_set_policy(gc, GC_POLICY_DEBUG);
      |                               ^~
      |                               |
      |                               int *
src/gc.h:173:31: note: expected ‘GC *’ but argument is of type ‘int *’
  173 | void        gc_set_policy(GC *gc, GCPolicy policy);
      |                           ~~~~^~
src/main.c:236:19: error: request for member ‘log_enabled’ in something not a structure or union
  236 |                 gc->log_enabled       = true;
      |                   ^~
src/main.c:237:19: error: request for member ‘stats_on_shutdown’ in something not a structure or union
  237 |                 gc->stats_on_shutdown = true;
      |                   ^~
src/main.c:239:31: warning: passing argument 1 of ‘gc_set_policy’ from incompatible pointer type [-Wincompatible-pointer-types]
  239 |                 gc_set_policy(gc, GC_POLICY_STRESS);
      |                               ^~
      |                               |
      |                               int *
src/gc.h:173:31: note: expected ‘GC *’ but argument is of type ‘int *’
  173 | void        gc_set_policy(GC *gc, GCPolicy policy);
      |                           ~~~~^~
src/main.c:240:19: error: request for member ‘stress_enabled’ in something not a structure or union
  240 |                 gc->stress_enabled    = true;
      |                   ^~
src/main.c:241:19: error: request for member ‘sweep_enabled’ in something not a structure or union
  241 |                 gc->sweep_enabled     = true;
      |                   ^~
src/main.c:242:19: error: request for member ‘log_enabled’ in something not a structure or union
  242 |                 gc->log_enabled       = true;
      |                   ^~
src/main.c:243:19: error: request for member ‘stats_on_shutdown’ in something not a structure or union
  243 |                 gc->stats_on_shutdown = true;
      |                   ^~
src/main.c:245:31: warning: passing argument 1 of ‘gc_set_policy’ from incompatible pointer type [-Wincompatible-pointer-types]
  245 |                 gc_set_policy(gc, GC_POLICY_ADAPTIVE);
      |                               ^~
      |                               |
      |                               int *
src/gc.h:173:31: note: expected ‘GC *’ but argument is of type ‘int *’
  173 | void        gc_set_policy(GC *gc, GCPolicy policy);
      |                           ~~~~^~
src/main.c:247:31: warning: passing argument 1 of ‘gc_set_policy’ from incompatible pointer type [-Wincompatible-pointer-types]
  247 |                 gc_set_policy(gc, GC_POLICY_BALANCED);
      |                               ^~
      |                               |
      |                               int *
src/gc.h:173:31: note: expected ‘GC *’ but argument is of type ‘int *’
  173 | void        gc_set_policy(GC *gc, GCPolicy policy);
      |                           ~~~~^~
make: *** [Makefile:57: src/main.o] Error 1
t85491005@penguin:~/prism-lang$ 